Fix consent block spacing

--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -26,7 +26,7 @@
   &__consent {
     background-color: $color-background-block-dark;
     padding: $padding-2xl;
-    margin-bottom: 52px;
+    margin-bottom: 24px;
     display: flex;
     justify-content: space-between;
     align-items: center;
